// Copyright 2012 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// If you change or add any fields in this file, update proto_visitors.h and
// potentially proto_enum_conversions.{h, cc}.

syntax = "proto2";

option java_multiple_files = true;
option java_package = "org.chromium.components.sync.protocol";

option optimize_for = LITE_RUNTIME;

package sync_pb;

message GetUpdatesCallerInfo {
  reserved 1;
  reserved "source";

  // True if notifications were enabled for this GetUpdateMessage.
  // Note: Ideally this would be moved out of GetUpdatesCallerInfo, so that
  // GetUpdatesCallerInfo itself can be removed.
  optional bool notifications_enabled = 2;
}
